# PSD

./: .coveragerc  .gitignore  .pre-commit-config.yaml  ASSESSMENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  algorithms.py  experiments.py  functions.py  logging.ini  pyproject.toml  requirements.txt  seeding.py  train_mnist_demo.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: profiling_notes.md  rosenbrock_hess_baseline.json  test_rosenbrock_hess.py
docs/: APPENDIX.md  ASSESSMENT.md  PSD_Quickstart_Colab.ipynb  api.md  conf.py  index.md  migration.md  quickstart.md  section_1_5_extension.md
docs/api/: config.md  graph.md  index.md  optimizer.md
docs/tutorials/: gradient_descent.md  mnist.md  pytorch_linear.md  saddle_escape.md
examples/: cifar10_example.py  ddp_train.py  mnist_example.py  quickstart.py  train_mnist.py
notebooks/: 10_minute_start.ipynb  advanced_usage.ipynb  navigation.ipynb  saddle_points_easy.ipynb  saddle_points_hard.ipynb  saddle_points_medium.ipynb  saddle_points_open_problem.ipynb  spectral_anomaly_detector.ipynb
psd/: __init__.py  framework_optimizers.py  graph.py  optimizer_tf.py
psd_optimizer/: __init__.py  optimizer.py  perturbed_adam.py
results/: convergence.csv  dimension_scaling.csv  nn_results.csv  noise_robustness.csv  per_episode_drop.csv
scripts/: hyperparameter_search.py  log_tools.py  profile_algorithms.py  release.py  run_benchmark.py  train_small_language_model.py
seedkit/: README.md  pyproject.toml
seedkit/src/seedkit/: __init__.py  cli.py  seeding.py
seedkit/tests/: test_seeding.py
src/psd/: __init__.py  _fast_ops.pyx  _rosenbrock.pyx  algorithms.py  config.py  fast_ops.py  feature_flags.py  framework_optimizers.py  functions.py  graph.py  log_analyzer.py  logging_utils.py  monster.py  optimizer_tf.py  utils.py
src/psd_optimizer/: __init__.py  optimizer.py  perturbed_adam.py
tests/: conftest.py  test_algorithms_property.py  test_feature_flags.py  test_find_optimal_path.py  test_functions.py  test_functions_numerical.py  test_graph_properties.py  test_log_analyzer.py  test_optimizer_serialization.py  test_stability.py
tests/golden/: psd_torch_state.json
