[build-system]
requires = ["setuptools>=61", "Cython>=0.29.36"]
build-backend = "setuptools.build_meta"

[project]
name = "psd-optimizer"
version = "0.1.1"
description = "Perturbed Saddle-point Descent optimizer for PyTorch"
authors = [{ name = "PSD Authors" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision",
    "optuna",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.5.0",
    "mypy==1.10.0",
    "ruff==0.1.7",
    "pytest==7.4.4",
    "pytest-cov==6.2.1",
    "hypothesis==6.138.2",
]
docs = [
    "sphinx==7.2.6",
    "myst-parser==2.0.0",
    "sphinx-autodoc-typehints==1.23.0",
]
bench = [
    "pytest-benchmark==4.0.0",
]

[project.urls]
Homepage = "https://github.com/farukalpay/PSD"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["psd*", "psd_optimizer*"]

[tool.setuptools.package-data]
psd = ["py.typed"]
psd_optimizer = ["py.typed"]

[tool.setuptools.ext_modules]
"psd._fast_ops" = {sources = ["src/psd/_fast_ops.pyx"]}

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = ["tests/", "src/psd/functions.py"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["torch", "torch.*", "tensorflow", "tensorflow.*", "optuna", "matplotlib", "numpy", "transformers", "transformers.*"]
ignore_missing_imports = true

[tool.ruff]
src = ["src", "tests"]
target-version = "py311"
line-length = 120
exclude = ["examples", "notebooks", "scripts", "experiments.py", "results", "data", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
markers = [
    "fast: quick tests for deterministic routines",
    "slow: exhaustive or computationally heavy tests",
]
