[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seedkit"
version = "0.1.0"
description = "Deterministic seeding utilities backed by SHA-256 and NumPy's Philox"
authors = [ { name = "SeedKit Developers" } ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["numpy>=1.22"]

[project.optional-dependencies]
torch = ["torch"]

[project.scripts]
seedkit = "seedkit.cli:main"
